--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
+@import url(//fonts.googleapis.com/earlyaccess/nanummyeongjo.css);
+
+.nanummyeongjo * {
+  font-family: 'Nanum Myeongjo', serif;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
